[gd_scene load_steps=17 format=3 uid="uid://b471itxsgafvo"]

[ext_resource type="Texture2D" uid="uid://dydfvdv4i8bt4" path="res://Sprites/HeartTracer Sprite.png" id="1_154x6"]
[ext_resource type="Script" path="res://Scripts/PlayerController.gd" id="1_h2cg8"]
[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="1_i0khf"]
[ext_resource type="Texture2D" uid="uid://bcd52qm655j6k" path="res://Sprites/ECG_Grid.png" id="1_lotu5"]
[ext_resource type="AudioStream" uid="uid://clw0vkwxbr1ey" path="res://Sounds/Beep.wav" id="3_0kb2j"]
[ext_resource type="AudioStream" uid="uid://dvsvlsqjla81" path="res://Sounds/DeathBeep.wav" id="4_0tbis"]
[ext_resource type="LabelSettings" uid="uid://bo6b7fvr3cytl" path="res://Fonts/UI Font.tres" id="5_s87qm"]
[ext_resource type="Script" path="res://Scripts/DrawTrace.gd" id="6_81uw3"]
[ext_resource type="Shader" path="res://Shaders/CRT_Effect.gdshader" id="9_sfsb7"]
[ext_resource type="LabelSettings" uid="uid://cx0damq6eivxv" path="res://Fonts/Main Menu Font.tres" id="9_vwq71"]
[ext_resource type="AudioStream" uid="uid://ch4bx2polo6wu" path="res://Sounds/NewEffect.wav" id="10_jmgvd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oaqoc"]
size = Vector2(77.3333, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_g327c"]
radius = 14.0

[sub_resource type="Animation" id="Animation_px5om"]
resource_name = "NewEffectAnimation"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.75, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.686275), Color(0, 0, 0, 0.686275), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EffectLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.01, 0.77, 1.75, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1280, 0), Vector2(0, 0), Vector2(-50, 0), Vector2(-1280, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../NewEffectSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.75),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lit3t"]
_data = {
"NewEffectAnimation": SubResource("Animation_px5om")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_riof2"]
shader = ExtResource("9_sfsb7")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(1280, 720)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 1.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.001
shader_parameter/noise_opacity = 0.2
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.02
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.1
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.1
shader_parameter/vignette_opacity = 0.5

[node name="GameWorld" type="Node2D"]

[node name="ScreenLimits" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="ScreenLimits"]
position = Vector2(426, -24)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_oaqoc")

[node name="Bottom" type="CollisionShape2D" parent="ScreenLimits"]
position = Vector2(426, 744)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_oaqoc")

[node name="BlackBackground" type="CenterContainer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0

[node name="BackgroundBlack" type="ColorRect" parent="BlackBackground"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="GridBackground" type="Sprite2D" parent="."]
modulate = Color(0.784314, 1, 1, 0.392157)
position = Vector2(640, 360)
texture = ExtResource("1_lotu5")

[node name="Tracer" type="RigidBody2D" parent="."]
position = Vector2(426, 360)
gravity_scale = 1.5
lock_rotation = true
script = ExtResource("1_h2cg8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tracer"]
shape = SubResource("CircleShape2D_g327c")

[node name="Sprite2D" type="Sprite2D" parent="Tracer"]
texture = ExtResource("1_154x6")

[node name="Trace" type="Node2D" parent="."]
script = ExtResource("6_81uw3")

[node name="Line2D" type="Line2D" parent="Trace"]
position = Vector2(426, 360)
width = 16.0
default_color = Color(0, 1, 0, 1)
antialiased = true

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("1_i0khf")

[node name="Game UI" type="VSplitContainer" parent="GameManager"]
z_index = 1
offset_right = 400.0
offset_bottom = 160.0

[node name="MarginContainer" type="MarginContainer" parent="GameManager/Game UI"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="BPM" type="Label" parent="GameManager/Game UI/MarginContainer"]
layout_mode = 2
text = "BPM: 60"
label_settings = ExtResource("5_s87qm")
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="GameManager/Game UI"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="TotalBeats" type="Label" parent="GameManager/Game UI/MarginContainer2"]
layout_mode = 2
text = "Total Beats: 0"
label_settings = ExtResource("5_s87qm")
vertical_alignment = 1

[node name="GameOverScreen" type="Control" parent="GameManager"]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="ColorRect" type="ColorRect" parent="GameManager/GameOverScreen"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.705882)

[node name="GameOverLabel" type="Label" parent="GameManager/GameOverScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_right = 641.0
offset_bottom = 128.0
grow_horizontal = 2
text = "Game Over"
label_settings = ExtResource("9_vwq71")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverScore" type="Label" parent="GameManager/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -79.0
offset_right = 640.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
text = "Heart Beats: 100
Most  Heart Beats: 100"
label_settings = ExtResource("9_vwq71")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" type="Label" parent="GameManager/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = 192.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
text = "Esc to menu, Space to play again"
label_settings = ExtResource("5_s87qm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewEffect" type="Control" parent="GameManager"]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NewEffectAnimation" type="AnimationPlayer" parent="GameManager/NewEffect"]
libraries = {
"": SubResource("AnimationLibrary_lit3t")
}

[node name="ColorRect" type="ColorRect" parent="GameManager/NewEffect"]
layout_mode = 0
offset_top = 248.0
offset_right = 1280.0
offset_bottom = 448.0
color = Color(0, 0, 0, 0)

[node name="EffectLabel" type="Label" parent="GameManager/NewEffect"]
layout_mode = 0
offset_left = 1263.59
offset_right = 2544.59
offset_bottom = 720.0
text = "New Effect!"
label_settings = ExtResource("9_vwq71")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ObstacleTimer" type="Timer" parent="GameManager"]
autostart = true

[node name="EffectsTimer" type="Timer" parent="GameManager"]
wait_time = 20.0

[node name="BeepSound" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("3_0kb2j")

[node name="DeathBeepSound" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("4_0tbis")

[node name="NewEffectSound" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("10_jmgvd")

[node name="CRT Shader Effect" type="CanvasLayer" parent="."]

[node name="CRT Shader" type="ColorRect" parent="CRT Shader Effect"]
material = SubResource("ShaderMaterial_riof2")
offset_right = 1280.0
offset_bottom = 720.0

[connection signal="StartGameSignal" from="Tracer" to="GameManager" method="_on_tracer_start_game_signal"]
[connection signal="is_GameOver" from="GameManager" to="Tracer" method="_on_game_manager_is_game_over"]
[connection signal="is_GameOver" from="GameManager" to="Trace" method="add_tracer_point"]
[connection signal="new_Trace" from="GameManager" to="Trace" method="add_tracer_point"]
[connection signal="timeout" from="GameManager/ObstacleTimer" to="GameManager" method="_on_obstacle_timer_timeout"]
[connection signal="timeout" from="GameManager/EffectsTimer" to="GameManager" method="_on_effects_timer_timeout"]
